--- a/docs/13.md
+++ b/docs/13.md
@@ -1,4 +1,4 @@
-# Caveats
+# 注意事项
 
 > 原文： [http://docs.cython.org/en/latest/src/tutorial/caveats.html](http://docs.cython.org/en/latest/src/tutorial/caveats.html)
 
