--- a/docs/25.md
+++ b/docs/25.md
@@ -131,7 +131,7 @@ Note
 
 我们这里`cimport`类`Shrubbery`，这是在编译时声明类型所必需的。为了能够`cimport`扩展类型，我们将类定义分为两部分，一部分在定义文件中，另一部分在相应的实现文件中。你应该阅读 [共享扩展类型](sharing_declarations.html#sharing-extension-types) 来学习这样做。
 
-### 类型测试和铸造
+### 类型测试和声明
 
 假设我有一个方法`quest()`，它返回`Shrubbery`类型的对象。要访问它的宽度我可以写：
 
@@ -148,7 +148,7 @@ print( (<Shrubbery>quest()).width )
 
 ```
 
-如果`quest()`实际上不是`Shrubbery`，这可能是危险的，因为它将尝试访问宽度作为可能不存在的 C 结构成员。在 C 级别，不是提出 [`AttributeError`](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.7)") ，而是返回一个无意义的结果（将该地址处的任何数据解释为 int）或者尝试访问无效内存可能导致段错误。相反，人们可以写：
+如果`quest()`实际上不是`Shrubbery`，可能会发生危险，因为它会尝试访问"width"这个可能不存在的 C 结构成员。在 C 级别，不是抛出 [`AttributeError`](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.7)") ，而是返回一个无意义的结果（将该地址处的任何数据解释为 int）或者尝试访问无效内存可能导致段错误。相反，人们可以写：
 
 ```py
 print( (<Shrubbery?>quest()).width )
@@ -159,7 +159,7 @@ print( (<Shrubbery?>quest()).width )
 
 要显式测试对象的类型，请使用`isinstance()`内置函数。对于已知的内置或扩展类型，Cython 将这些转换为快速且安全的类型检查，忽略对象的`__class__`属性等的更改，以便在成功进行`isinstance()`测试后，代码可以依赖于预期的 C 结构扩展类型及其 [`cdef`](language_basics.html#cdef) 属性和方法。
 
-## 扩展类型和无
+## 扩展类型和无(None)
 
 当您将参数或 C 变量声明为扩展类型时，Cython 将允许它采用值`None`以及其声明类型的值。这类似于 C 指针可以采用值`NULL`的方式，因此需要谨慎行事。只要您对它执行 Python 操作就没有问题，因为将应用完整的动态类型检查。但是，当您访问扩展类型的 C 属性时（如上面的 widen_shrubbery 函数），由您来确保您使用的引用不是`None` - 为了提高效率，Cython 不会检查这个。
 
@@ -193,7 +193,7 @@ def widen_shrubbery(Shrubbery sh not None, extra_width):
 
 现在该函数将自动检查`sh`是否为`not None`并检查它是否具有正确的类型。
 
-Note
+注意：
 
 `not None`子句只能用于 Python 函数（用 [`def`](https://docs.python.org/3/reference/compound_stmts.html#def "(in Python v3.7)") 定义）而不能用于 C 函数（用 [`cdef`](language_basics.html#cdef) 定义）。如果需要检查 C 函数的参数是否为 None，则需要自己进行。
 
