--- a/docs/30.md
+++ b/docs/30.md
@@ -1,8 +1,8 @@
-# 早期绑定速度
+# 早期绑定以提升速度
 
 > 原文： [http://docs.cython.org/en/latest/src/userguide/early_binding_for_speed.html](http://docs.cython.org/en/latest/src/userguide/early_binding_for_speed.html)
 
-作为一种动态语言，Python 鼓励一种编程风格，即在方法和属性方面考虑类和对象，而不是它们适合类层次结构。
+作为一种动态语言，Python 鼓励一种编程风格，即从方法和属性的角度考虑类和对象，而不是从它们在类层次结构所处的位置。
 
 这可以使 Python 成为一种非常轻松和舒适的快速开发语言，但需要付出代价 - 管理数据类型的“繁文缛节”会被转储到解释器上。在运行时，解释器在搜索命名空间，获取属性以及解析参数和关键字元组方面做了大量工作。与“早期绑定”语言（如 C ++）相比，这种运行时“后期绑定”是 Python 相对缓慢的主要原因。
 
