--- a/docs/12.md
+++ b/docs/12.md
@@ -2,9 +2,9 @@
 
 > 原文： [http://docs.cython.org/en/latest/src/tutorial/pxd_files.html](http://docs.cython.org/en/latest/src/tutorial/pxd_files.html)
 
-除了`.pyx`源文件之外，Cython 还使用`.pxd`文件，它们的工作方式类似于 C 头文件 - 它们包含 Cython 声明（有时是代码部分），仅供 Cython 模块使用。使用`cimport`关键字将`pxd`文件导入`pyx`模块。
+除了`.pyx`源文件之外，Cython 还使用`.pxd`文件，它们的工作方式类似于 C 头文件 - 它们包含 Cython 声明（有时是代码部分），仅供 Cython 模块使用。在`pyx`模块可以使用`cimport`关键字将`pxd`文件导入。
 
-`pxd`文件有很多用例：
+`pxd`文件有很多使用场景：
 
 > 1.  它们可用于共享外部 C 声明。
 >     
@@ -22,12 +22,12 @@
 >     
 > 3.  当附带同名的`pyx`文件时，它们为 Cython 模块提供了一个 Cython 接口，以便其他 Cython 模块可以使用比 Python 更高效的协议与之通信。
 
-在我们的集成示例中，我们可能会将其分解为`pxd`文件，如下所示：
+在我们的积分函数案例中，我们可能会将其分解为多个`pxd`文件，如下所示：
 
-> 1.  添加`cmath.pxd`功能，定义 C `math.h`头文件中可用的 C 功能，如`sin`。然后人们只需在`integrate.pyx`中做`from cmath cimport sin`。
+> 1.  添加`cmath.pxd`，定义 C `math.h`头文件中可用的 C 函数，如`sin`。以后仅需在`integrate.pyx`中做`from cmath cimport sin`即可使用。
 >     
 >     
-> 2.  添加`integrate.pxd`，以便用 Cython 编写的其他模块可以定义要集成的快速自定义函数。
+> 2.  添加`integrate.pxd`，以便用 Cython 编写的其他模块可以快速的自定义积分函数。
 >     
 >     
 >     
@@ -42,3 +42,25 @@
 >     
 >     
 >     请注意，如果您的 cdef 类具有属性，则必须在类声明`pxd`文件（如果使用）中声明属性，而不是`pyx`文件。编译器会告诉你这个。
+
+# `__init__.pxd`
+
+Cython也支持使用`__init__.pxd`文件来在包命名空间内进行声明，就像是Python中的`__init__.py`文件一样。
+
+接着积分函数这个例子说，我们可以通过如下方式将模块代码打包。
+
+> 1. 将模块文件放在一个目录树下，就像是Python中一样。
+>     ```bash
+>     CyIntegration/
+>      __init__.pyx
+>      __init__.pxd
+>      integrate.pyx
+>      integrate.pxd
+>      ```
+> 2. 在`__init__.pxd`文件中，使用`cimport`引入需要在包命名空间中可见的声明
+>     
+>     ```py
+>     from CyIntegration cimport integrate
+>     ```
+>   这样，其他模块就可以通过`cimport`这个包来通过Cython的方式更快的访问包内容和数据。
+> 
