--- a/docs/14.md
+++ b/docs/14.md
@@ -2,28 +2,28 @@
 
 > 原文： [http://docs.cython.org/en/latest/src/tutorial/profiling_tutorial.html](http://docs.cython.org/en/latest/src/tutorial/profiling_tutorial.html)
 
-这部分描述了 Cython 的性能分析能力。如果您熟悉纯 Python 代码的分析，则只能阅读第一部分（ [Cython Profiling Basics](#profiling-basics)）。如果您不熟悉 Python 分析，您还应该阅读教程（ [分析教程](#profiling-tutorial) ），它将逐步引导您完成一个完整的示例。
+这部分描述了 Cython 的性能分析能力。如果您熟悉纯 Python 代码的性能分析，只需要阅读第一节（ [Cython 性能分析基础](#profiling-basics)）。如果您不熟悉 Python 性能分析，您还应该阅读教程（ [分析教程](#profiling-tutorial) ），它将逐步引导您完成一个完整的示例。
 
 ## Cython 性能分析基础
 
-Cython 中的分析由编译器指令控制。它可以通过 Cython 装饰器设置为整个文件或基于每个功能。
+Cython 中的性能分析由编译器指令控制。它可以通过 Cython 装饰器设置为整个文件或基于每个功能。
 
 ### 启用完整源文件的分析
 
-通过全局指令将完整源文件的分析启用到文件顶部的 Cython 编译器：
+通过在文件顶部添加一个给 Cython 编译器的全局指令，可以开启整个源文件的性能分析：
 
 ```py
 # cython: profile=True
 
 ```
 
-请注意，分析会给每个函数调用带来轻微的开销，因此会使程序变慢（或者很多，如果你经常调用一些小函数）。
+请注意，性能分析会给每个函数调用带来轻微的开销，因此会使程序变慢（或者很多，如果你经常调用一些微型函数）。
 
 启用后，从 cProfile 模块调用时，您的 Cython 代码将像 Python 代码一样运行。这意味着您可以使用与仅 Python 代码相同的工具，将您的 Cython 代码与 Python 代码一起分析。
 
 ### 禁用分析功能
 
-如果您的分析因为某些小功能的调用开销而变得混乱，而您希望在您的配置文件中看不到这些功能 - 无论是因为您计划内联它们还是因为您确定不能让它们更快 - 你可以使用一个特殊的装饰器来禁用一个函数的分析（无论它是否全局启用）：
+如果您的性能分析因为某些，您在性能分析报告中并不需要看到的，微型函数的调用开销而变得混乱时，无论是因为您计划内联它们还是因为您确定不能让它们更快，你都可以使用一个特殊的装饰器来禁用一个函数的性能分析（无论它是否全局启用）：
 
 ```py
 cimport cython
@@ -43,7 +43,7 @@ def my_often_called_function():
 
 ```
 
-这也将启用分析支持，因此不需要上面的`profile=True`选项。例如，覆盖率分析需要线跟踪。
+这也将启用性能分析支持，因此不需要上面的`profile=True`选项。例如，覆盖率分析需要线跟踪。
 
 请注意，即使通过编译器指令启用了行跟踪，默认情况下也不会使用它。由于运行时减速可能很大，因此必须由 C 编译器通过设置 C 宏定义`CYTHON_TRACE=1`进行编译。要在跟踪中包含 nogil 函数，请设置`CYTHON_TRACE_NOGIL=1`（表示`CYTHON_TRACE=1`）。可以在`setup.py`脚本的扩展定义中定义 C 宏，也可以使用以下文件头注释设置源文件中的相应 distutils 选项（如果`cythonize()`用于编译）：
 
@@ -100,7 +100,7 @@ def approx_pi(n=10000000):
 
 ```
 
-在我的盒子上，这需要大约 4 秒来运行默认 n 的函数。我们选择 n 越高，![\pi](img/5ff0026ef5efcc1b4ba5ac568d19d36e.jpg)的近似值越好。经验丰富的 Python 程序员已经看到很多地方可以优化这段代码。但请记住优化的黄金法则：永不优化而不进行分析。让我重复一遍：**从不**优化而不分析您的代码。您对代码的哪一部分花费太多时间的想法是错误的。至少，我的总是错的。所以让我们编写一个简短的脚本来分析我们的代码：
+在我这里，这需要大约 4 秒来运行这个使用n的默认值的函数。我们选择 n 越高，![\pi](img/5ff0026ef5efcc1b4ba5ac568d19d36e.jpg)的近似值越好。经验丰富的 Python 程序员已经看到很多地方可以优化这段代码。但请记住优化的黄金法则：在做完性能分析之前绝不轻易优化代码。让我重复一遍：**在做完性能分析之前**绝不轻易优化代码。您对代码的哪一部分花费太多时间的想法是错误的。至少，我的总是错的。所以让我们编写一个简短的脚本来分析我们的代码：
 
 ```py
 # profile.py
@@ -116,7 +116,7 @@ s.strip_dirs().sort_stats("time").print_stats()
 
 ```
 
-在我的盒子上运行它给出以下输出：
+在我这里上运行它给出以下输出：
 
 ```py
 Sat Nov  7 17:40:54 2009    Profile.prof
@@ -155,9 +155,9 @@ def approx_pi(int n=10000000):
 
 ```
 
-注意第一行：我们必须告诉 Cython 应该启用性能分析。这使得 Cython 代码稍慢，但如果没有这个，我们将无法从 cProfile 模块获得有意义的输出。其余代码大部分都没有改变，我只输入了一些可能会加快速度的变量。
+注意第一行：我们必须告诉 Cython 应该启用性能分析。这使得 Cython 代码稍慢，但如果没有这个，我们将无法从 cProfile 模块获得有意义的输出。其余代码大部分都没有改变，我只给一些变量注明了类型，这可能会加快一点速度。
 
-我们还需要修改我们的分析脚本以直接导入 Cython 模块。这是添加 [Pyximport](../userguide/source_files_and_compilation.html#pyximport)模块导入的完整版本：
+我们还需要修改我们的性能分析脚本以直接导入 Cython 模块。这是添加 [Pyximport](../userguide/source_files_and_compilation.html#pyximport)模块导入的完整版本：
 
 ```py
 # profile.py
@@ -176,7 +176,7 @@ s.strip_dirs().sort_stats("time").print_stats()
 
 ```
 
-我们只添加了两行，其余的完全相同。或者，我们也可以手动将代码编译成扩展名;我们根本不需要更改配置文件脚本。该脚本现在输出以下内容：
+我们只添加了两行，其余的完全相同。或者，我们也可以手动将代码编译成扩展库;我们根本不需要更改性能分析脚本。该脚本现在输出以下内容：
 
 ```py
 Sat Nov  7 18:02:33 2009    Profile.prof
@@ -194,7 +194,7 @@ Sat Nov  7 18:02:33 2009    Profile.prof
 
 ```
 
-我们增加了 1.8 秒。不是太寒酸。将输出与前一个进行比较，我们看到 recip_square 函数变得更快，而 approx_pi 函数没有发生很大变化。让我们更专注于 recip_square 函数。首先请注意，不要从我们模块之外的代码调用此函数;所以将它变成 cdef 以减少呼叫开销是明智的。我们也应该摆脱幂运算符：它变成了 Cython 的 pow（i，2）函数调用，但我们可以改为编写 i * i，这可能更快。整个功能也是内联的良好候选者。让我们看看这些想法的必要变化：
+运行时间减少了1.8秒。还不赖。将输出结果与前一个进行比较，我们看到 recip_square 函数变得更快，而 approx_pi 函数没有发生很大变化。让我们更专注于 recip_square 函数。首先请注意，不要从我们模块之外的代码调用此函数;所以将它变成 cdef 以减少调用开销是明智的。我们也应该摆脱幂运算符：它变成了 Cython 的 pow（i，2）函数调用，但我们可以改为编写 i * i，这可能更快。整个函数也很适合内联。让我们看看这些想法会带来什么变化：
 
 ```py
 # cython: profile=True
@@ -213,7 +213,7 @@ def approx_pi(int n=10000000):
 
 ```
 
-现在运行配置文件脚本会产生：
+现在运行性能分析脚本会产生：
 
 ```py
 Sat Nov  7 18:10:11 2009    Profile.prof
@@ -231,7 +231,7 @@ Sat Nov  7 18:10:11 2009    Profile.prof
 
 ```
 
-那又给我们买了 1.8 秒。不是我们可以期待的戏剧性变化。为什么 recip_square 仍然在这个表中;应该是内联的，不是吗？这样做的原因是，即使消除了函数调用，Cython 仍会生成分析代码。让我们告诉它不再介绍 recip_square;无论如何，我们无法使功能更快：
+运行时间又快了1.8秒。这并不意外。为什么 recip_square 仍然在这个表中;应该是内联的，不是吗？这样做的原因是，即使消除了函数调用，Cython 仍会生成分析代码。让我们告诉它不再分析 recip_square 的性能;无论如何，我们都没法使这个函数更快了：
 
 ```py
 # cython: profile=True
@@ -270,7 +270,7 @@ Sat Nov  7 18:15:02 2009    Profile.prof
 
 ```
 
-首先要注意的是速度的巨大提升：这个版本只占我们第一个 Cython 版本的 1/50。另请注意，recip_square 已经从我们想要的表中消失了。但最奇特和重要的变化是，about_pi 也变得更快。这是所有分析的问题：在配置文件运行中调用函数会给函数调用增加一定的开销。这个开销是**而不是**添加到被调用函数所花费的时间，而是加到**调用**函数所花费的时间。在这个例子中，在最后一次运行中，approx_pi 不需要 2.622 秒;但它调用了 recip_square 10000000 次，每次都需要稍微设置一下它的分析。这相当于大约 2.6 秒的大量时间损失。禁用经常调用的函数的分析现在揭示了 approx_pi 的实际时间;如果需要，我们现在可以继续优化它。
+首先要注意的是速度的巨大提升：这个版本只占我们第一个 Cython 版本的 1/50。另请注意，recip_square 已经从我们想要的表中消失了。但最奇特和重要的变化是，about_pi 也变得更快。这是所有分析的问题：在性能分析脚本运行中调用函数会给函数调用增加一定的开销。这个开销**没有**被加到被调用函数所花费的时间里，而是加到**调用**函数所花费的时间。在这个例子中，在最后一次运行中，approx_pi 不需要 2.622 秒;但它调用了 recip_square 10000000 次，每次都需要稍微设置一下它的性能分析。这相当于大约 2.6 秒的时间损失。禁用经常调用的函数的性能分析会揭示 approx_pi 的实际时间;如果需要，我们现在还可以继续优化它。
 
 这个分析教程到此结束。此代码仍有一些改进空间。我们可以尝试用 C stdlib 中的 sqrt 调用替换 approx_pi 中的幂运算符;但这并不一定比调用 pow（x，0.5）更快。
 
