--- a/docs/16.md
+++ b/docs/16.md
@@ -2,13 +2,13 @@
 
 > 原文： [http://docs.cython.org/en/latest/src/tutorial/memory_allocation.html](http://docs.cython.org/en/latest/src/tutorial/memory_allocation.html)
 
-动态内存分配在 Python 中大多不是问题。一切都是对象，引用计数系统和垃圾收集器在不再使用时自动将内存返回给系统。
+动态内存分配在 Python 中通常不是个问题。一切都是对象，引用计数系统和垃圾收集器在不再使用时自动将内存返回给系统。
 
-当谈到更多低级数据缓冲区时，Cython 通过 NumPy，内存视图或 Python 的 stdlib 数组类型特别支持简单类型的（多维）数组。它们是全功能的，垃圾收集的，比 C 中的裸指针更容易使用，同时仍然保持速度和静态类型的好处。参见 [使用 Python 数组](array.html#array-array) 和 [类型记忆视图](../userguide/memoryviews.html#memoryviews) 。
+当谈到更多低级数据缓冲区时，Cython 通过 NumPy，内存视图或 Python 的 stdlib 数组类型特别支持简单类型的（多维）数组。它们是功能丰富的、带垃圾收集、比 C 中的裸指针更容易使用，同时仍然保持速度和静态类型的好处。参见 [使用 Python 数组](array.html#array-array) 和 [带类型的内存视图](../userguide/memoryviews.html#memoryviews) 。
 
-但是，在某些情况下，这些对象仍然会产生不可接受的开销，这可能会导致在 C 中进行手动内存管理。
+但是，在某些情况下，这些对象仍然会产生不可接受的开销，使得在 C 中进行手动内存管理变得很有必要。
 
-简单的 C 值和结构（例如局部变量`cdef double x`）通常在堆栈上分配并通过值传递，但对于更大和更复杂的对象（例如动态大小的双精度列表），必须手动请求内存并释放。 C 为此提供函数`malloc()`，`realloc()`和`free()`，可以从`clibc.stdlib`导入到 cython 中。他们的签名是：
+简单的 C 值和结构（例如局部变量`cdef double x`）通常在堆栈上分配并通过值传递，但对于更大和更复杂的对象（例如动态大小的双精度列表），必须手动请求内存和释放。 C 为此提供函数`malloc()`，`realloc()`和`free()`，可以从`clibc.stdlib`导入到 cython 中。他们的函数签名是：
 
 ```py
 void* malloc(size_t size)
@@ -18,36 +18,6 @@ void free(void* ptr)
 ```
 
 malloc 使用的一个非常简单的示例如下：
-
-| 
-
-```py
- 1
- 2
- 3
- 4
- 5
- 6
- 7
- 8
- 9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-```
-
- | 
 
 ```py
 import random
@@ -76,9 +46,7 @@ def random_noise(int number=1):
 
 ```
 
- |
-
-请注意，用于在 Python 堆上分配内存的 C-API 函数通常比上面的低级 C 函数更受欢迎，因为它们提供的内存实际上是在 Python 的内部内存管理系统中考虑的。它们还对较小的内存块进行了特殊优化，通过避免代价高昂的操作系统调用来加速其分配。
+请注意，用于在 Python 堆上分配内存的 C-API 函数通常比上面的低级 C 函数更受欢迎，因为它们提供的内存实际上是在 Python 的内部内存管理系统中管理的。它们还对较小的内存块进行了特殊优化，通过避免代价高昂的操作系统调用来加速其分配。
 
 可以在`cpython.mem`标准声明文件中找到 C-API 函数：
 
