--- a/docs/15.md
+++ b/docs/15.md
@@ -18,7 +18,7 @@ Cython 支持四种 Python 字符串类型： [`bytes`](https://docs.python.org/
 
 ## 字符串文字
 
-Cython 了解所有 Python 字符串类型前缀：
+Cython 支持所有 Python 字符串类型前缀：
 
 *   字节串的`b'bytes'`
 *   Unicode 字符串的`u'text'`
@@ -34,7 +34,7 @@ Cython 了解所有 Python 字符串类型前缀：
 
 关于文本处理，Python 内置了对 Unicode 的支持，C 完全缺乏。如果您正在处理 Unicode 文本，那么使用 Python Unicode 字符串对象通常比尝试使用 C 字符串中的编码数据更好。 Cython 使这非常简单有效。
 
-一般来说：除非您知道自己在做什么，否则请尽量避免使用 C 字符串，而应使用 Python 字符串对象。对此明显的例外是从外部 C 代码来回传递它们。此外，C ++字符串也记住它们的长度，因此它们可以在某些情况下提供 Python 字节对象的合适替代，例如，在明确定义的上下文中不需要引用计数时。
+一般来说：除非您知道自己在做什么，否则请尽量避免使用 C 字符串，而应使用 Python 字符串对象。对此明显的例外是从外部 C 代码来回传递它们。此外，C ++字符串也能记住它们的长度，因此它们可以在某些情况下提供 Python 字节对象的合适替代，例如，在明确定义的上下文中不需要引用计数时。
 
 ## 传递字节串
 
@@ -64,7 +64,7 @@ cdef void get_a_c_string(char** c_string_ptr, Py_ssize_t *length):
 
 ```
 
-我们制作了相应的`c_func.pxd`以便能够实现这些功能：
+我们制作了相应的`c_func.pxd`以便能够引用这些函数：
 
 ```py
 cdef char* c_call_returning_a_c_string()
@@ -113,7 +113,7 @@ def main():
 
 这里，不需要额外的字节计数，`c_string`中的`length`字节将被复制到 Python 字节对象中，包括任何空字节。请记住，在这种情况下，切片索引被认为是准确的，并且没有进行边界检查，因此不正确的切片索引将导致数据损坏和崩溃。
 
-请注意，Python 字节字符串的创建可能会因异常而失败，例如由于记忆力不足。如果转换后需要`free()`字符串，则应将赋值包装在 try-finally 结构中：
+请注意，Python 字节字符串的创建可能会因异常而失败，例如由于内存不足。如果转换后您需要通过`free()`来释放字符串的内存，则应将赋值写在在 try-finally 结构中：
 
 ```py
 from libc.stdlib cimport free
@@ -141,11 +141,11 @@ cdef char* other_c_string = py_string  # other_c_string is a 0-terminated string
 
 ## 接受 Python 代码中的字符串
 
-另一方面，从 Python 代码接收输入，初看起来可能看起来很简单，因为它只处理对象。但是，在不使 API 太窄或太不安全的情况下做到这一点可能并不完全明显。
+另一方面，从 Python 代码接收输入，初看起来可能看起来很简单，因为它只处理对象。但是，在不使 API 应用范围太窄或不安全的情况下做到这一点可能并不完全容易。
 
-在 API 仅处理字节字符串（即二进制数据或编码文本）的情况下，最好不要将输入参数键入 [`bytes`](https://docs.python.org/3/library/stdtypes.html#bytes "(in Python v3.7)") ，因为这会将允许的输入限制为准确该类型并排除子类型和其他类型的字节容器，例如 [`bytearray`](https://docs.python.org/3/library/stdtypes.html#bytearray "(in Python v3.7)") 对象或内存视图。
+在 API 仅处理字节字符串（即二进制数据或编码文本）的情况下，最好不要将输入参数注明为[`bytes`类型](https://docs.python.org/3/library/stdtypes.html#bytes "(in Python v3.7)") ，因为这会将允许的输入限制为仅该类型并排除子类型和其他类型的字节容器，例如 [`bytearray`](https://docs.python.org/3/library/stdtypes.html#bytearray "(in Python v3.7)") 对象或内存视图。
 
-根据数据的处理方式（以及在何处），最好接收一维存储器视图，例如，
+根据数据的处理方式（以及在何处），最好接收一维内存视图，例如，
 
 ```py
 def process_byte_data(unsigned char[:] data):
@@ -156,7 +156,7 @@ def process_byte_data(unsigned char[:] data):
 
 ```
 
-Cython 的内存视图在 [Typed Memoryviews](../userguide/memoryviews.html)中有更详细的描述，但上面的例子已经显示了 1 维字节视图的大部分相关功能。它们允许有效地处理数组并接受任何可以将其自身解压缩到字节缓冲区中的内容，而无需中间复制。处理后的内容最终可以在内存视图本身（或其中的一部分）中返回，但通常最好将数据复制回平坦且简单的 [`bytes`](https://docs.python.org/3/library/stdtypes.html#bytes "(in Python v3.7)") 或 [`bytearray`](https://docs.python.org/3/library/stdtypes.html#bytearray "(in Python v3.7)") 对象，特别是当只返回一个小切片时。由于内存视图不会复制数据，因此它们会保持整个原始缓冲区的活动状态。这里的一般想法是通过接受任何类型的字节缓冲区来自由输入，但通过返回一个简单，适应良好的对象来严格控制输出。这可以简单地完成如下：
+Cython 的内存视图在 [Typed Memoryviews](36.md)中有更详细的描述，但上面的例子已经显示了 1 维字节视图的大部分相关功能。它们允许有效地处理数组并接受任何可以将其自身解压缩到字节缓冲区中的内容，而无需中间复制。处理后的内容最终可以在内存视图本身（或其中的一部分）中返回，但通常最好将数据复制回一维且结构简单的 [`bytes`](https://docs.python.org/3/library/stdtypes.html#bytes "(in Python v3.7)") 或 [`bytearray`](https://docs.python.org/3/library/stdtypes.html#bytearray "(in Python v3.7)") 对象，特别是当只返回一个小切片时。由于内存视图不会复制数据，因此它们会保持整个原始缓冲区的活动状态。这里的一般想法是通过接受任何类型的字节缓冲区来自由输入，但通过返回一个简单，适应良好的对象来严格控制输出。通过以下代码可以实现：
 
 ```py
 def process_byte_data(unsigned char[:] data):
@@ -171,9 +171,9 @@ def process_byte_data(unsigned char[:] data):
 
 ```
 
-如果字节输入实际上是编码文本，并且进一步处理应该在 Unicode 级别进行，那么正确的做法是直接解码输入。这几乎只是 Python 2.x 中的一个问题，Python 代码期望它可以将带有编码文本的字节串（ [`str`](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.7)") ）传递到文本 API 中。由于这通常发生在模块 API 的多个位置，因此辅助函数几乎总是可行的，因为它允许以后轻松调整输入规范化过程。
+对于只读的缓冲类型，比如字节，对应的内存试图类型应该被声明为 `const`(阅读[只读视图](36.md#只读视图)). 如果字节输入实际上是编码过的文本，并且进一步处理应该在 Unicode 级别进行，那么正确的做法是直接解码输入。这几乎只是 Python 2.x 中的一个问题，Python 代码期望它可以将带有编码文本的字节串（ [`str`](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.7)") ）传递到文本 API 中。由于这通常发生在模块 API 的多个位置，因此辅助函数几乎总是可行的，因为它允许以后轻松调整输入规范化过程。
 
-这种输入规范化功能通常类似于以下内容：
+这种将输入值进行规范化的函数代码通常和下面这段很类似：
 
 ```py
 # to_unicode.pyx
@@ -212,7 +212,7 @@ def api_func(s):
 
 ```
 
-类似地，如果进一步处理发生在字节级别，但是应该接受 Unicode 字符串输入，那么如果您使用内存视图，则以下可能有效：
+类似地，如果进一步处理发生在字节级别，但是应该接受 Unicode 字符串输入，那么如果您使用内存视图，则以下可能代码有效：
 
 ```py
 # define a global name for whatever char type is used in the module
@@ -251,7 +251,7 @@ cdef extern from "someheader.h":
 
 ## 将字节解码为文本
 
-如果您的代码只处理字符串中的二进制数据，那么最初提供的传递和接收 C 字符串的方法就足够了。但是，当我们处理编码文本时，最好在接收时将 C 字节字符串解码为 Python Unicode 字符串，并在出路时将 Python Unicode 字符串编码为 C 字节字符串。
+如果您的代码只处理字符串中的二进制数据，那么最初提供的传递和接收 C 字符串的方法就足够了。但是，当我们处理编码文本时，最好在接收时将 C 字节字符串解码为 Python Unicode 字符串，并在输出时将 Python Unicode 字符串编码为 C 字节字符串。
 
 使用 Python 字节字符串对象，通常只需调用`bytes.decode()`方法将其解码为 Unicode 字符串：
 
@@ -287,7 +287,7 @@ ustring = c_string[:length].decode('UTF-8')
 
 当字符串包含空字节时，应该使用相同的字符串，例如当它使用像 UCS-4 这样的编码时，每个字符以四个字节编码，其中大多数字符往往是 0。
 
-同样，如果提供切片索引，则不会进行边界检查，因此不正确的索引会导致数据损坏和崩溃。但是，使用负索引是可能的，并将调用`strlen()`以确定字符串长度。显然，这仅适用于没有内部空字节的 0 终止字符串。以 UTF-8 编码的文本或 ISO-8859 编码之一通常是一个很好的候选者。如果有疑问，最好传递“明显”正确的索引，而不是依赖于数据是否符合预期。
+同样，如果提供切片索引，则不会进行边界检查，因此不正确的索引会导致数据损坏和崩溃。但是，使用负索引是可能的，并将调用`strlen()`以确定字符串长度。显然，这仅适用于没有内部空字节的 0 终止字符串。以 UTF-8 编码的文本或 ISO-8859 编码之一通常是一个很好的选择。如果有疑问，最好传递“明显”正确的索引，而不是依赖于数据是否符合预期。
 
 通常的做法是在专用函数中包装字符串转换（以及一般的非平凡类型转换），因为每当从 C 接收文本时，都需要以完全相同的方式完成。这可能如下所示：
 
@@ -314,7 +314,7 @@ cdef unicode tounicode_with_length_and_free(
 
 ## 将文本编码为字节
 
-反过来，将 Python unicode 字符串转换为 C `char*`本身非常有效，假设您实际需要的是内存管理字节字符串：
+反过来，将 Python unicode 字符串转换为 C `char*`本身非常有效，假设您实际需要的是管理了内存的字节字符串：
 
 ```py
 py_byte_string = py_unicode_string.encode('UTF-8')
@@ -334,7 +334,7 @@ cdef char* c_string = py_unicode_string.encode('UTF-8')
 
 ## C ++字符串
 
-包装 C ++库时，字符串通常以`std::string`类的形式出现。与 C 字符串一样，Python 字节字符串自动强制转换为 C ++字符串：
+包装 C ++库时，字符串通常以`std::string`类的形式出现。与 C 字符串一样，Python 字节字符串和 C ++字符串之间可以自动强制转换：
 
 ```py
 # distutils: language = c++
@@ -376,13 +376,13 @@ def get_ustrings():
 
 ```
 
-对于 C ++字符串，解码片将始终考虑字符串的适当长度并应用 Python 切片语义（例如，为越界索引返回空字符串）。
+对于 C ++字符串，解码切片将始终考虑字符串的适当长度并应用 Python 切片语义（例如，为越界索引返回空字符串）。
 
 ## 自动编码和解码
 
-Cython 0.19 附带两个新指令：`c_string_type`和`c_string_encoding`。它们可用于更改 C / C ++字符串强制执行的 Python 字符串类型。默认情况下，它们仅强制执行字节类型，并且必须明确地进行编码或解码，如上所述。
+Cython 0.19 附带两个新指令：`c_string_type`和`c_string_encoding`。它们可用于更改那些和 C / C ++字符串双向强制类型转换的Python 字符串类型。默认情况下，它们仅对字节类型执行双向强制类型转换，并且必须明确地进行编码或解码，如上所述。
 
-有两种用例不方便。首先，如果正在处理的所有 C 字符串（或大多数）包含文本，则从 Python unicode 对象自动编码和解码可以减少代码开销。在这种情况下，您可以将模块中的`c_string_type`指令设置为`unicode`，将`c_string_encoding`指定为 C 代码使用的编码，例如：
+有两种使用场景下，这会不方便。首先，如果正在处理的所有 C 字符串（或大多数）包含文本，则从 Python unicode 对象自动编码和解码可以减少代码开销。在这种情况下，您可以将模块中的`c_string_type`指令设置为`unicode`，将`c_string_encoding`指定为 C 代码使用的编码，例如：
 
 ```py
 # cython: c_string_type=unicode, c_string_encoding=utf8
@@ -397,7 +397,7 @@ py_bytes_object = <bytes>c_string
 
 ```
 
-第二个用例是当所有正在处理的 C 字符串只包含 ASCII 可编码字符（例如数字）时，您希望代码在 Python 2 中使用本机遗留字符串类型，而不是始终使用 Unicode。在这种情况下，您可以将字符串类型设置为 [`str`](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.7)") ：
+第二个用例是当所有正在处理的 C 字符串只包含 ASCII 可编码字符（例如数字）时，您希望代码在 Python 2 中使用遗留的字符串类型，而不是始终使用 Unicode。在这种情况下，您可以将字符串类型设置为 [`str`](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.7)") ：
 
 ```py
 # cython: c_string_type=str, c_string_encoding=ascii
@@ -427,7 +427,7 @@ def func():
 
 ```
 
-（此示例使用函数上下文来安全地控制 Unicode 字符串的生命周期。可以从外部修改全局 Python 变量，这使得依赖其值的生命周期变得很危险。）
+（此示例使用函数上下文来安全地控制 Unicode 字符串的生命周期。可以从外部修改全局 Python 变量，这使得在它的完整生命周期上依赖其值变得很危险。）
 
 ## 源代码编码
 
@@ -506,7 +506,7 @@ print( <long>uchar_val )
 
 ```
 
-请注意，转换为 C `long`（或`unsigned long`）将正常工作，因为 Unicode 字符可以具有的最大代码点值是 1114111（`0x10FFFF`）。在 32 位或更高的平台上，`int`同样出色。
+请注意，转换为 C `long`（或`unsigned long`）将正常工作，因为 Unicode 字符可以具有的最大代码点值是 1114111（`0x10FFFF`）。在 32 位或更高的系统上，`int`同样出色。
 
 ## 窄 Unicode 构建
 
@@ -540,7 +540,7 @@ assert uchar == 0x12345
 
 ## 迭代
 
-只要循环变量被适当地键入，Cython 0.13 就支持对`char*`，字节和 unicode 字符串的有效迭代。所以以下将生成预期的 C 代码：
+只要循环变量被表明适当的类型，Cython 0.13 支持对`char*`，字节和 unicode 字符串的有效迭代。所以以下将生成预期的 C 代码：
 
 ```py
 cdef char* c_string = "Hello to A C-string's world"
@@ -576,9 +576,10 @@ for uchar in ustring:
 
 ```
 
-自动类型推断通常会在这里产生更高效的代码。但是，请注意，某些 unicode 操作仍然需要将值作为 Python 对象，因此 Cython 最终可能会为循环内部的循环变量值生成冗余转换代码。如果这导致特定代码段的性能下降，您可以显式地将循环变量键入为 Python 对象，或者将其值赋值给循环内部的 Python 类型变量，以在运行 Python 之前强制执行一次性强制对它的操作。
+自动类型推断通常会在这里产生更高效的代码。但是，请注意，某些 unicode 操作仍然需要将值作为 Python 对象，因此 Cython 最终可能会为循环内部的循环变量值生成冗余转换代码。如果这导致特定代码段的性能下降，您可以显式地将循环变量键入为 Python 对象，或者将其值赋值给循环内部的 Python 类型变量，且在循环代码的某处，对其执行任何Python操作前，强制执行一次转换。
 
-`in`测试也有优化，因此以下代码将在纯 C 代码中运行（实际上使用 switch 语句）：
+
+`in`的操作也有优化，以下代码将在纯 C 代码中运行（实际上使用 switch 语句）：
 
 ```py
 cpdef void is_in(Py_UCS4 uchar_val):
@@ -595,7 +596,7 @@ cpdef void is_in(Py_UCS4 uchar_val):
 
 Windows 系统 API 本身以零终止 UTF-16 编码`wchar_t*`字符串的形式支持 Unicode，因此称为“宽字符串”。
 
-默认情况下，Windows 版本的 CPython 定义 [`Py_UNICODE`](https://docs.python.org/3/c-api/unicode.html#c.Py_UNICODE "(in Python v3.7)") 作为`wchar_t`的同义词。这使得内部`unicode`表示与 UTF-16 兼容，并允许有效的零拷贝转换。这也意味着 Windows 构建总是[窄 Unicode 构建](#narrow-unicode-builds)与所有警告。
+默认情况下，Windows 版本的 CPython 定义 [`Py_UNICODE`](https://docs.python.org/3/c-api/unicode.html#c.Py_UNICODE "(in Python v3.7)") 作为`wchar_t`的同义词。这使得内部`unicode`表示与 UTF-16 兼容，并允许有效的零拷贝转换。这也意味着 Windows 构建版本总是[窄 Unicode 构建](#narrow-unicode-builds)，带有需要所有谨慎处理的部份。
 
 为了帮助与 Windows API 互操作，Cython 0.19 支持宽字符串（以`Py_UNICODE*`的形式）并隐式地将它们转换为`unicode`字符串对象。这些转换的行为与`char*`和 [`bytes`](https://docs.python.org/3/library/stdtypes.html#bytes "(in Python v3.7)") 相同，如[传递字节串](#passing-byte-strings)中所述。
 
@@ -621,6 +622,6 @@ MessageBoxW(NULL, u"Hello Cython \u263a", title, 0)
 
 强烈建议不要在 Windows 之外使用`Py_UNICODE*`字符串。 [`Py_UNICODE`](https://docs.python.org/3/c-api/unicode.html#c.Py_UNICODE "(in Python v3.7)") 本身在不同平台和 Python 版本之间不可移植。
 
-CPython 3.3 已经转移到 unicode 字符串（  [**PEP 393** ](https://www.python.org/dev/peps/pep-0393)）的灵活内部表示，使得所有 [`Py_UNICODE`](https://docs.python.org/3/c-api/unicode.html#c.Py_UNICODE "(in Python v3.7)") 相关 API 被弃用，效率低下。
+CPython 3.3 已变为对unicode 字符串（  [**PEP 393** ](https://www.python.org/dev/peps/pep-0393)）使用灵活的内部表示，使得所有 [`Py_UNICODE`](https://docs.python.org/3/c-api/unicode.html#c.Py_UNICODE "(in Python v3.7)") 相关 API 被弃用，效率低下。
 
 CPython 3.3 更改的一个结果是`unicode`字符串的 [`len()`](https://docs.python.org/3/library/functions.html#len "(in Python v3.7)") 总是在 _ 代码点 _（“字符”）中测量，而 Windows API 期望 UTF-16 的数量 _ 代码单元 _（每个代理单独计算）。要始终获得代码单元的数量，请直接调用 [`PyUnicode_GetSize()`](https://docs.python.org/3/c-api/unicode.html#c.PyUnicode_GetSize "(in Python v3.7)") 。
