Patch - Update 17.md
修复一处错误

--- a/docs/17.md
+++ b/docs/17.md
@@ -8,7 +8,7 @@
 
 不要在`.pyx`文件之外的文件中编写直接的 Cython 代码通常只是一个建议，但是的确有正当理由这样做 - 更容易测试和调试，与纯 Python 开发人员协作等。在纯模式下，您或多或少地受限于可以在 Python 中表达（或至少模拟）的代码，以及静态类型声明。除此之外的任何事情都只能在扩展语言语法的.pyx 文件中完成，因为它取决于 Cython 编译器的功能。
 
-## 增加.pxd
+## .pxd 增强
 
 使用扩充`.pxd`可以让原始`.py`文件完全不受影响。另一方面，需要保持`.pxd`和`.py`以使它们保持同步。
 
