--- a/docs/19.md
+++ b/docs/19.md
@@ -4,7 +4,7 @@
 
 Python 有一个内置数组模块，支持原始类型的动态一维数组。可以从 Cython 中访问 Python 数组的底层 C 数组。同时它们是普通的 Python 对象，当使用 [`multiprocessing`](https://docs.python.org/3/library/multiprocessing.html#module-multiprocessing "(in Python v3.7)") 时，它们可以存储在列表中并在进程之间进行序列化。
 
-与使用`malloc()`和`free()`的手动方法相比，这提供了 Python 的安全和自动内存管理，并且与 Numpy 数组相比，不需要安装依赖项，如 [`array`](https://docs.python.org/3/library/array.html#module-array "(in Python v3.7)") 模块内置于 Python 和 Cython 中。
+与使用`malloc()`和`free()`的手动方法相比，这提供了 Python 的安全和自动内存管理，并且与 Numpy 数组相比，不需要安装依赖项，因为 [`array`](https://docs.python.org/3/library/array.html#module-array "(in Python v3.7)") 模块内置于 Python 和 Cython 中。
 
 ## 内存视图的安全使用
 
@@ -20,9 +20,9 @@ print(ca[0])
 
 注意：导入会将常规 Python 数组对象带入命名空间，而 cimport 会添加可从 Cython 访问的函数。
 
-Python 数组使用类型签名和初始值序列构造。有关可能的类型签名，请参阅[阵列模块](https://docs.python.org/library/array.html)的 Python 文档。
+Python 数组使用类型签名和初始值序列构造。有关可能的类型签名，请参阅[数组模块](https://docs.python.org/library/array.html)的 Python 文档。
 
-请注意，当将 Python 数组分配给类型为内存视图的变量时，构造内存视图会有轻微的开销。但是，从那时起，变量可以无需开销即可传递给其他函数，只要输入即可：
+请注意，当将 Python 数组分配给类型为内存视图的变量时，构造内存视图会有轻微的开销。但是，从此刻起，变量只要被限定了类型，就可以无需开销的传递给其他函数：
 
 ```py
 from cpython cimport array
@@ -45,7 +45,7 @@ print(no_overhead(ca))  # ca is already a memory view, so no overhead
 
 ## 零开销，不安全访问原始 C 指针
 
-为了避免任何开销并且能够将 C 指针传递给其他函数，可以将底层连续数组作为指针进行访问。没有类型或边界检查，因此请小心使用正确的类型和签名。
+为了避免任何开销并且能够将 C 指针传递给其他函数，可以将底层连续数组作为指针进行访问。没有类型或边界检查，因此请小心使用正确的类型和符号。
 
 ```py
 from cpython cimport array
@@ -80,7 +80,7 @@ newarray = array.clone(int_array_template, 3, zero=False)
 
 ```
 
-阵列也可以扩展和调整大小;这避免了重复的内存重新分配，如果元素将被逐个追加或删除。
+阵列也可以扩展和调整大小;这避免了如果元素将被逐个追加(append)或删除(remove)时反复进行的内存重新分配。
 
 ```py
 from cpython cimport array
@@ -123,7 +123,7 @@ data.as_pyunicodes
 
 ### 功能
 
-以下函数可用于阵列模块中的 Cython：
+以下函数可用于数组模块中的 Cython：
 
 ```py
 int resize(array self, Py_ssize_t n) except -1
@@ -137,7 +137,7 @@ int resize_smart(array self, Py_ssize_t n) except -1
 
 ```
 
-高效率的小增量;使用增长模式，提供摊销的线性时间附加。
+对小增量更高效;使用增长模式，提供摊销的线性的时间增加。
 
 ```py
 cdef inline array clone(array template, Py_ssize_t length, bint zero)
