--- a/docs/19.md
+++ b/docs/19.md
@@ -80,7 +80,7 @@ newarray = array.clone(int_array_template, 3, zero=False)
 
 ```
 
-阵列也可以扩展和调整大小;这避免了如果元素将被逐个追加(append)或删除(remove)时反复进行的内存重新分配。
+数组也可以扩展和调整大小;这避免了如果元素将被逐个追加(append)或删除(remove)时反复进行的内存重新分配。
 
 ```py
 from cpython cimport array
