--- a/docs/24.md
+++ b/docs/24.md
@@ -4,39 +4,128 @@
 
 ## 声明数据类型
 
-作为一种动态语言，Python 鼓励一种编程风格，即在方法和属性方面考虑类和对象，而不是它们适合类层次结构。
+作为一种动态语言，Python 鼓励一种编程风格，即在方法和属性方面考虑类和对象，而不是考虑它们适合的类层次结构。
 
 这可以使 Python 成为一种非常轻松和舒适的快速开发语言，但需要付出代价 - 管理数据类型的“繁文缛节”会被转储到解释器上。在运行时，解释器在搜索命名空间，获取属性以及解析参数和关键字元组方面做了大量工作。与“早期绑定”语言（如 C ++）相比，这种运行时“后期绑定”是 Python 相对缓慢的主要原因。
 
 然而，使用 Cython，通过使用“早期绑定”编程技术可以获得显着的加速。
 
-注意
-
-注明类型不是必需的
+注意：限定类型不是必需的
 
 为参数和变量提供静态类型可以方便地加速代码，但这不是必需的。选择恰当的位置和时机去优化。实际上，在注明类型无法提供优化的地方注明类型反而会拖慢你代码的速度，仅在Cython需要检查对象是否满足对应的类型地方注明即可。
 
 ## C 变量和类型定义
 
-[`cdef`](#cdef) 语句用于声明 C 变量，无论是本地变量还是模块级变量：
+C 变量可以通过以下方式定义：
+- 使用Cython特有的 **cdef** 表述
+- 使用 PEP-484/526 类型注释来标明C数据类型 或者
+- 使用 `cython.declare()` 函数
+
+**cdef** 语句和 `declare()` 都可以用于声明局部变量、模块级变量以及类属性。但是类型注释之影响局部变量和属性而忽略模块级。这主要是因为类型注释并不是Cython特有的，所以 Cython 把这些变量保存在一个
+模块字典里（本身是Python对象）而不是把它们作为模块的内部C变量。在Python代码中使用 `declare()` 可以显式的声明全局C变量。
 
 ```py
-cdef int i, j, k
-cdef float f, g[42], *h
+cdef int a_global_variable
+
+def func():
+    cdef int i, j, k
+    cdef float f
+    cdef float[42] g
+    cdef float *h
+    # cdef float f, g[42], *h  # mix of pointers, arrays and values in a single line is deprecated
+
+    i = j = 5
 
 ```
 
-和 [`struct`](#struct) ， [`union`](#union) 或 [`enum`](#enum) 类型：
+众所周知，在C语言中，声明的全局变量会被自动初始化为 `0` , `NULL` 或者 `None` ，具体取决于类型。然而同时，我们也知道在Python和C中，对于局部变量而言，仅声明是不会初始化的。如果你使用了一个局部变量，但是没有给他赋值，那Cython和C的编译器都会发布一个警告 ”本地变量 ... 引用了未赋值的变量“ -- ”local variable … referenced before assignment“。 你需要在第一次使用变量前的某个地方赋值，但是在大部分场景下，你都可以在声明的时候就直接赋值。
+
+```py
+cdef int a_global_variable
+
+def func():
+    cdef int i = 10, j, k
+    cdef float f = 2.5
+    cdef int[4] g = [1, 2, 3, 4]
+    cdef float *h = &f
+```
+
+> 注意： 除此之外，还支持用 `ctypedef` 表达式或者是 `cython.typedef()` 函数来给类型设置别名。
+> ```py
+> ctypedef unsigned long ULong
+> ctypedef int* IntPtr
+> ```
+
+### C数组
+
+通过给变量增加 `[数组大小]` 可以声明C数组。
+
+```py
+def func():
+    cdef float[42] g
+    cdef int[5][5][5] f
+```
+
+> 注意：Cython语法目前支持两种方法声明一个数组
+> 
+> ```py
+> cdef int arr1[4], arr2[4]  # C语言风格的数组声明
+> cdef int[4] arr1, arr2     # Java风格的数组声明
+> ```
+> 
+> 两者生成同样的C语言代码，但是Java语言的风格要与 [类型化的内存视图](36.md) 和 [融合类型](32.md) 更加贴合。C语言风格的声明有点过时了，因此作为替代，更建议使用Java风格的声明语句。
+> 过期的C语言风格声明语句不支持初始化时赋值
+>
+> ```py
+> cdef int g[4] = [1, 2, 3, 4]  # 错误
+> cdef int[4] g = [1, 2, 3, 4]  # 允许
+> cdef int g[4]        # 可以，但是不推荐
+> g = [1, 2, 3, 4]
+> ```
+
+### 结构(Struct)、共用体(Union)、枚举类(enum)
+
+除了基本类型，C语言的 `struct` , `union` 和 `enum` 也都支持。
 
 ```py
 cdef struct Grail:
     int age
     float volume
 
+def main():
+    cdef Grail grail = Grail(5, 3.0)
+    print(grail.age, grail.volume)
+```
+
+结构可以被声明为 `cdef packed struct` 和 使用C语言指令 `#pragma pack(1)`效果一致。
+
+```py
+cdef packed struct StructArray:
+    int[4] spam
+    signed char[5] eggs
+```
+
+> 注意：这种声明方式会移除C语言给成员之间自动设置的空格来保证它们在内存中是有序排列的（更多细节可以查看[wiki 文档](https://en.wikipedia.org/wiki/Data_structure_alignment)）.
+> 主要用途在于numpy 结构化的数组将数据以紧凑对其(packed)的形式存储，所以一个 `cdef packed struct` 可以在[内存视图](36.md)中和它匹配。
+> 纯Python风格的写法不支持紧凑对其的结构。
+
+下面案例演示了共用体的声明。
+
+```py
 cdef union Food:
     char *spam
     float *eggs
 
+def main():
+    cdef float *arr = [1.0, 2.0]
+    cdef Food spam = Food(spam='b')
+    cdef Food eggs = Food(eggs=arr)
+    print(spam.spam, eggs.eggs[0])
+```
+
+枚举类可以通过 `cdef enum` 表达式来创建。
+
+```py
 cdef enum CheeseType:
     cheddar, edam,
     camembert
@@ -46,13 +135,11 @@ cdef enum CheeseState:
     soft = 2
     runny = 3
 
+print(CheeseType.cheddar)
+print(CheeseState.hard)
 ```
 
-另见 [struct，union 和 enum 声明的样式](external_C_code.html#struct-union-enum-styles)
-
-Note
-
-结构可以声明为`cdef packed struct`，其效果与 C 指令`#pragma pack(1)`相同。
+> 注意：纯Python风格目前还不支持枚举类（查看 Github Issue [#4252](https://github.com/cython/cython/issues/4252)）
 
 将枚举声明为`cpdef`将创建  [**PEP 435** ](https://www.python.org/dev/peps/pep-0435)风格的 Python 包装器：
 
@@ -64,7 +151,7 @@ cpdef enum CheeseState:
 
 ```
 
-目前没有用于定义常量的特殊语法，但您可以使用匿名 [`enum`](#enum) 声明来实现此目的，例如：
+目前没有用于定义常量的特殊语法，但您可以使用匿名 `enum` 声明来实现此目的，例如：
 
 ```py
 cdef enum:
@@ -72,79 +159,40 @@ cdef enum:
 
 ```
 
-Note
-
-单词`struct`，`union`和`enum`仅在定义类型时使用，而不是在引用时使用。例如，要声明一个指向`Grail`的变量，您将编写：
-
-```py
-cdef Grail *gp
-
-```
-
-并不是：
-
-```py
-cdef struct Grail *gp # WRONG
-
-```
-
-还有一个`ctypedef`语句用于为类型命名，例如：
-
-```py
-ctypedef unsigned long ULong
-
-ctypedef int* IntPtr
-
-```
-
-也可以用 [`cdef`](#cdef) 声明函数，使它们成为 c 函数。
-
-```py
-cdef int eggs(unsigned long l, float f):
-    ...
-
-```
-
-您可以在 [Python 函数与 C 函数](#python-functions-vs-c-functions) 中阅读更多相关信息。
-
-您可以使用 [`cdef`](#cdef) 声明类，使它们成为 [扩展类型](extension_types.html#extension-types) 。那些将具有非常接近 python 类的行为，但速度更快，因为它们在内部使用`struct`来存储属性。
-
-这是一个简单的例子：
-
-```py
-from __future__ import print_function
-
-cdef class Shrubbery:
-    cdef int width, height
-
-    def __init__(self, w, h):
-        self.width = w
-        self.height = h
-
-    def describe(self):
-        print("This shrubbery is", self.width,
-              "by", self.height, "cubits.")
-
-```
-
-您可以在 [扩展类型](extension_types.html#extension-types) 中阅读更多相关信息。
+> Note: 在Cython中，`struct`，`union` 和 `enum` 关键字仅在定义类型时使用，而不是在引用时使用。例如，要声明一个指向`Grail`的变量，您将编写：
+> 
+> ```py
+> cdef Grail *gp
+> ```
+> 
+> 并不是：
+> 
+> ```py
+> cdef struct Grail *gp # WRONG
+> ```
 
 ### 类型
 
-Cython 使用 C 类型的常规 C 语法，包括指针。它提供所有标准 C 类型，即`char`，`short`，`int`，`long`，`long long`以及它们的`unsigned`版本，例如`unsigned int`。特殊`bint`类型用于 C 布尔值（`int`，其中 0 /非 0 值为 False / True）和`Py_ssize_t`用于（容器）的（签名）大小。
+Cython 对于C语言类型使用普通的C语言语法，包括指针。它提供所有标准C类型，即`char`，`short`，`int`，`long`，`long long`以及它们的`unsigned`版本，例如`unsigned int`。特殊`bint`类型用于 C 布尔值（`int`，其中 0 /非 0 值为 False / True）和`Py_ssize_t`用于 Python容器的 带符号大小。
 
-通过将`*`附加到它们指向的基本类型，例如，在 C 中构造指针类型。 `int**`指向指向 C int 的指针。数组使用普通的 C 数组语法，例如， `int[10]`，并且在编译时必须知道堆栈分配的数组的大小。 Cython 不支持 C99 的可变长度数组。请注意，Cython 使用数组访问进行指针解除引用，因为`*x`不是有效的 Python 语法，而`x[0]`是。
+在Cython语法中，可以通过将`*`附加到它们指向的基本类型来在 C 中构造指针类型。比如 `int**`指向指向 C int 的指针的指针。纯Python风格下，普通的指针类型使用带多个字符"p"并与类型中间用下划线分割的命名风格，比如 `cython.pp_int` 代表C整形指针的指针。更多的指针类型可以通过 `cython.pointer()` 函数来构造，比如 `cython.pointer(cython.int)`.
 
-此外，Python 类型`list`，`dict`，`tuple`等可用于静态类型，以及任何用户定义的 [扩展类型](extension_types.html#extension-types) 。例如：
+数组使用普通的 C 数组语法，例如， `int[10]`，并且在编译时必须知道堆栈分配的数组的大小。 Cython 不支持 C99 的可变长度数组。请注意，Cython 使用数组访问进行指针解除引用，因为`*x`不是有效的 Python 语法，而`x[0]`是。
+
+此外，Python 类型`list`，`dict`，`tuple`等可用于静态类型，以及任何用户定义的 [扩展类型](25.md) 。例如：
 
 ```py
 cdef list foo = []
 
 ```
 
-这里需要精确匹配类型（list类型），不允许使用子类。这允许 Cython 通过访问内置类的内部来优化代码。对于这种类型的输入，Cython 在内部使用`PyObject*`类型的 C 变量。 Python 类型 int，long 和 float 不能用于静态类型，而是分别解释为 C `int`，`long`和`float`，因为使用这些 Python 类型的静态类型变量没有任何优势。
+这里需要精确匹配类型（list类型），不允许使用子类。这允许 Cython 通过访问内置类的内部来优化代码，这是首先声明内置类型的主要原因。
 
-Cython 提供了一个加速和类型化的 Python 元组，即`ctuple`。 `ctuple`由任何有效的 C 类型组装而成。例如：
+对于声明的内置类型，Cython使用带C内部变量的 `PyObject*` 类型。
+
+> 注意：Python 类型 int，long 和 float 不能用于静态类型，而是分别解释为 C `int`，`long`和`float`，因为使用这些 Python 类型的静态类型变量没有任何优势。另一方面，在纯Python风格下，类型标注为 `int` , `long` , 和 `float` Python类型会被解释为对应的Python对象。
+
+Cython 提供了一个加速和类型化的 Python 元组的等效版本，即`ctuple`。 `ctuple`由任何有效的 C 类型组装而成。例如：
 
 ```py
 cdef (double, int) bar
@@ -155,11 +203,56 @@ cdef (double, int) bar
 
 虽然这些 C 类型可以非常快，但它们具有 C 语义。具体来说，整数类型溢出，C `float`类型只有 32 位精度（而不是 Python 浮动包装的 64 位 C `double`，而且通常是你想要的）。如果要使用这些数字 Python 类型，只需省略类型声明并将它们作为对象。
 
-也可以声明 [扩展类型](extension_types.html#extension-types) （用`cdef class`声明）。这确实允许子类。此类型主要用于访问`cdef`方法和扩展类型的属性。 C 代码使用一个变量，它是指向特定类型结构的指针，类似于`struct MyExtensionTypeObject*`。
+### 类型修饰符
 
-### 分组多个 C 声明
+Cython 支持 `const` 和 `volatile` 的 [C语言类型修饰符](https://en.wikipedia.org/wiki/Type_qualifier).
 
-如果您有一系列声明都以 [`cdef`](#cdef) 开头，您可以将它们分组为 [`cdef`](#cdef) 块，如下所示：
+```py
+cdef volatile int i = 5
+
+cdef const int sum(const int a, const int b):
+    return a + b
+
+cdef void print_const_pointer(const int *value):
+    print(value[0])
+
+cdef void print_pointer_to_const_value(int * const value):
+    print(value[0])
+
+cdef void print_const_pointer_to_const_value(const int * const value):
+    print(value[0])
+```
+
+> 注意：这两个类型修饰符在纯Python风格下还不支持。不仅如此，由于Cython需要为定义和赋值分别生成定义，`const` 修饰符在许多场景下都不可用。因此，我们建议把它用必须在函数参数和指针类型上增加 `const` 的场景（为了使用某些现有的C/C ++接口）。
+
+### 扩展类型
+
+也可以声明 [扩展类型](25.md) （用`cdef class` 或者 `@cclass`装饰器声明）。它们的行为和Python类非常相似（比如创建子类），但是在Cython代码中访问成员的速度要快得多。把变量类型设置为扩展类型主要是用来访问 这些扩展类型的 `cdef/@cfunc` 方法和属性。C 代码使用一个变量，它是指向特定类型结构的指针，类似于`struct MyExtensionTypeObject*`。
+
+这里是一个简单的例子。
+
+```py
+from __future__ import print_function
+cdef class Shrubbery:
+    cdef int width
+    cdef int height
+
+    def __init__(self, w, h):
+        self.width = w
+        self.height = h
+
+    def describe(self):
+        print("This shrubbery is", self.width,
+              "by", self.height, "cubits.")
+```
+
+更多的内容可以在[扩展类型文档](25.md)中查看。
+
+### 给多个C声明分组
+
+如果您有一系列声明都以`cdef`开头，您可以将它们分组为`cdef`代码块，如下所示：
+
+> 注意：仅在Cython的 `cdef` 的语法下支持。
 
 ```py
 from __future__ import print_function
@@ -183,11 +276,11 @@ Cython 中有两种函数定义：
 
 Python 函数是使用 def 语句定义的，就像在 Python 中一样。它们将 Python 对象作为参数并返回 Python 对象。
 
-C 函数使用新的 [`cdef`](#cdef) 语句定义。它们将 Python 对象或 C 值作为参数，并且可以返回 Python 对象或 C 值。
+C 函数使用新的 `cdef` 语句定义。它们将 Python 对象或 C 值作为参数，并且可以返回 Python 对象或 C 值。
 
-在 Cython 模块中，Python 函数和 C 函数可以自由地相互调用，但只能通过解释的 Python 代码从模块外部调用 Python 函数。因此，您希望从 Cython 模块“导出”的任何函数都必须使用 def 声明为 Python 函数。还有一种称为 [`cpdef`](#cpdef) 的混合功能。可以从任何地方调用 [`cpdef`](#cpdef) ，但在从其他 Cython 代码调用时使用更快的 C 调用约定。 [`cpdef`](#cpdef) 也可以在子类或实例属性上被 Python 方法覆盖，即使从 Cython 调用也是如此。如果发生这种情况，大多数性能提升当然都会丢失，即使这些性能提升没有丢失，与调用 [`cdef`](#cdef) 相比，从 Cython 调用被覆盖的方法也会有一个额外的开销。
+在 Cython 模块中，Python 函数和 C 函数可以自由地相互调用，但只有Python函数能被外部Python解释器解释的代码调用。因此，您希望从 Cython 模块“导出”的任何函数都必须使用 def 声明为 Python 函数。还有一种混合函数，可以通过在`.pyx`文件用**cpdef**声明 或者是使用`@ccall`装饰器来获得。这些函数在可以从任何地方被调用，但在从其他 Cython 代码调用时会使用更快的 C 调用约定。 这些混合函数也可以在子类或实例属性上被 Python 方法覆盖，即使从 Cython 调用也是如此。如果发生这种情况，大多数性能提升当然都会丢失，即使这些性能提升没有丢失，与调用C语言方法相比，从 Cython 调用被覆盖的方法也会只会有一个微小的额外开销。
 
-可以使用常规 C 声明语法将任一类型的函数的参数声明为具有 C 数据类型。例如，：
+无论哪种类型的函数都可以用C语言语法来声明使用C数据类型。例如，：
 
 ```py
 def spam(int i, char *s):
@@ -216,13 +309,13 @@ def spam(python_i, python_s):
 
 ```
 
-目前，只能对数字类型，字符串类型和结构进行自动转换（以递归方式组合任何这些类型）;尝试将任何其他类型用于 Python 函数的参数将导致编译时错误。如果要在调用后使用指针，必须小心使用字符串以确保引用。可以从 Python 映射中获取结构，如果要在函数返回后使用它们，则必须再次使用字符串属性。
+目前，只能对数字类型，字符串类型和结构（以递归方式组合任何这些类型）进行自动转换; 尝试将任何其他类型用于 Python 函数的参数将导致编译时错误。如果要在调用后使用指针，必须小心使用字符串以确保引用。可以从 Python 映射中获取结构，如果要在函数返回后使用它们，则必须再次使用字符串属性。
 
 另一方面，C 函数可以具有任何类型的参数，因为它们是使用普通的 C 函数调用直接传递的。
 
-使用 [`cdef`](#cdef) 与 Python 对象返回类型声明的函数（如 Python 函数）将在执行离开函数体时返回`None`值而没有显式返回值。这与 C / C ++形成对比，后者使返回值未定义。在非 Python 对象返回类型的情况下，返回等效于零的值，例如，对于`int`为 0，对于`bint`为`False`，对于指针类型为`NULL`。
+使用 `cdef` 或者 `@cfunc` 装饰器、且声明了返回一个Python对象的函数，像Python 函数一样，将在执行离开函数体时如果没有显式返回值就返回`None`值。这与 C / C ++不同，后者保留返回值处于未定义的状态。在返回类型为非Python对象的情况下，返回等效于零的值，例如，对于`int`为 0，对于`bint`为`False`，对于指针类型为`NULL`。
 
-可以在 [早期结合速度](early_binding_for_speed.html#early-binding-for-speed) 中找到这些不同方法类型的优缺点的更完整比较。
+可以在 [早期结合速度](30.md) 中找到这些不同方法类型的优缺点的更完整比较。
 
 ### Python 对象作为参数和返回值
 
@@ -240,7 +333,7 @@ cdef spamobjs(x, y):
 > 
 > 这仅适用于 Cython 代码。在 C 中实现的其他 Python 包（如 NumPy）可能不遵循这些约定。
 
-name 对象也可用于显式声明某些内容为 Python 对象。如果声明的名称将被视为类型的名称，这可能很有用，例如：
+类型名称对象 `object` 也可以用来显式声明某些内容为 Python 对象。如果声明的名称将被视为类型的名称时，这可能很有用，例如：
 
 ```py
 cdef ftang(object int):
@@ -260,6 +353,32 @@ cdef object ftang(object int):
 
 要创建借用引用，请将参数类型指定为`PyObject*`。 Cython 不会执行自动`Py_INCREF`或`Py_DECREF`，例如：
 
+```py
+from __future__ import print_function
+
+from cpython.ref cimport PyObject
+
+import sys
+
+python_dict = {"abc": 123}
+python_dict_refcount = sys.getrefcount(python_dict)
+
+
+cdef owned_reference(object obj):
+    refcount = sys.getrefcount(python_dict)
+    print('Inside owned_reference: {refcount}'.format(refcount=refcount))
+
+
+cdef borrowed_reference(PyObject * obj):
+    refcount = obj.ob_refcnt
+    print('Inside borrowed_reference: {refcount}'.format(refcount=refcount))
+
+
+print('Initial refcount: {refcount}'.format(refcount=python_dict_refcount))
+owned_reference(python_dict)
+borrowed_reference(<PyObject *>python_dict)
+```
+
 将显示：
 
 ```py
@@ -271,11 +390,11 @@ Inside borrowed_reference: 2
 
 ### 可选参数
 
-与 C 不同，可以在`cdef`和`cpdef`函数中使用可选参数。但是，无论是在`.pyx`文件还是相应的`.pxd`文件中声明它们，都存在差异。
+与 C 不同，可以在`@ccall`和`cpdef`函数中使用可选参数。但是，在`.pyx` / `.py`文件还是相应的`.pxd`文件中声明它们存在差异。
 
 为避免重复（以及潜在的未来不一致），默认参数值在声明中（在`.pxd`文件中）不可见，但仅在实现中（在`.pyx`文件中）。
 
-在`.pyx`文件中，签名与 Python 本身的签名相同：
+在`.pyx` / `.py` 文件中，签名与 Python 本身的签名相同：
 
 ```py
 from __future__ import print_function
@@ -308,11 +427,9 @@ cdef class C(B):
 
 ```
 
-Note
+> 注意: 子类化时参数的数量可能会增加，但参数类型和顺序必须相同，如上例所示。
 
-子类化时参数的数量可能会增加，但 arg 类型和顺序必须相同，如上例所示。
-
-当使用没有默认值的可选 arg 覆盖可选 arg 时，可能会有轻微的性能损失。
+当可选参数被没有设置默认值的可选参数覆盖时，可能会有轻微的性能损失。
 
 ### 仅关键字参数
 
@@ -335,7 +452,7 @@ foo = f(4, "bar", c=68, e=1.0)
 def g(a, b, *, c, d):
     ...
 
-# We cannot call g with less verbosity than this.
+# 我们至少要写的这么啰嗦才能允许调用
 foo = g(4.0, "something", c=68, d="other")
 
 ```
@@ -344,67 +461,106 @@ foo = g(4.0, "something", c=68, d="other")
 
 ### 函数指针
 
+> 注意：纯Python风格下目前还不支持函数指针。[Github Issue #4279](https://github.com/cython/cython/issues/4279)
+
+下面这个例子演示了如何声明一个 `ptr_add` 函数指针并把 `add` 函数赋值给它。
+
+```py
+cdef int(*ptr_add)(int, int)
+
+cdef int add(int a, int b):
+    return a + b
+
+ptr_add = add
+
+print(ptr_add(1, 3))
+```
+
 在`struct`中声明的函数会自动转换为函数指针。
 
-有关使用带有功能指针的错误返回值，请参见 [错误返回值](#error-return-values) 底部的注释。
+有关使用带有函数指针的错误返回值，请参见下面 **错误返回值** 这一节内容底部的注释。
 
 ### 错误返回值
 
-如果你没有做任何特殊的事情，用 [`cdef`](#cdef) 声明的不返回 Python 对象的函数无法向其调用者报告 Python 异常。如果在此类函数中检测到异常，则会打印警告消息并忽略该异常。
+在Python中（更确切的是CPython运行期间），发生在函数内部的异常会被提示给调用方并且通过定义的错误返回值沿着调用栈向上传播。对于返回Python对象的函数（也就是一个对象指针）错误返回值
+就是简单的一个空(`NULL`)指针，所以任何定义了返回Python对象的函数都有明确定义的错误返回值。
 
-如果你想要一个不返回 Python 对象的 C 函数能够将异常传播给它的调用者，你需要为它声明一个异常值。这是一个例子：
+尽管对应Python函数总是如此，定义为C函数或者 `cpdef` / `@ccall`的函数能返回任意的C类型，因此没有明确定义的错误返回值。默认情况下，Cython使用一个专属的返回值来表示一个非外部的
+`cpdef` / `@call`函数中发生了异常。但是，Cython如何处理这些异常可以根据需要进行改变。
+
+你可以用 `cdef` 声明一个带有异常返回值的函数。比如：
 
 ```py
 cdef int spam() except -1:
     ...
-
 ```
 
-使用此声明，每当`spam`函数内发生异常时，它将立即返回值`-1`。此外，每当对`spam`函数的调用返回`-1`时，将假定已发生异常并将进行传播。
+在该声明下，每当`spam`函数内发生异常时，它将立即返回值`-1`。此外，每当对`spam`函数的调用返回`-1`时，将假定已发生异常并将进行传播。调用 `spam()` 函数差不多可以翻译成下面的C语言代码：
 
-声明函数的异常值时，不应显式或隐式返回该值。特别是，如果异常返回值是`False`值，那么您应该确保该函数永远不会通过隐式或空返回终止。
+```c
+ret_val = spam();
+if (ret_val == -1) goto error_handler;
+```
+
+当你为函数定义异常返回值时，你绝不应该显式或隐式返回该值。这包括空的 `return` 表达式（没有返回值，此时Cython会插入默认的返回值，如果是C数字类型的话为 `0` ）。通常来说，异常返回值最好从无效或者非常不可能的函数返回值中选择，比如对于一个返回非负数结果的函数而言可以选择一个负数，或者是对于一个只会返回较小数字的函数而言可以选择一个非常大的值比如 `INT_MAX`。
 
 如果所有可能的返回值都是合法的，并且您不能完全为信号错误保留一个，则可以使用另一种形式的异常值声明：
 
 ```py
 cdef int spam() except? -1:
     ...
-
 ```
 
-“？”表示值`-1`仅表示可能的错误。在这种情况下，如果返回异常值，Cython 会生成对 [`PyErr_Occurred()`](https://docs.python.org/3/c-api/exceptions.html#c.PyErr_Occurred "(in Python v3.7)") 的调用，以确保它确实是一个错误。
+“？”意味着`-1`返回值**可能**代表一个错误。
 
-还有第三种形式的例外价值声明：
+在这种情况下，如果异常返回值被返回了，Cython会调用 **PyErr_Occurred()** 来确保它确实是收到了一个异常而不是普通的结果。调用 `Spam()` 函数差不多相当于下面的C语言代码:
 
-```py
-cdef int spam() except *:
-    ...
-
+```c
+spam()
+if (PyErr_Occurred()) goto error_handler;
 ```
 
-这种形式导致 Cython 在每次调用`spam`函数后生成对 [`PyErr_Occurred()`](https://docs.python.org/3/c-api/exceptions.html#c.PyErr_Occurred "(in Python v3.7)") 的调用，无论它返回什么值。如果您有一个返回 void 的函数需要传播错误，则必须使用此表单，因为没有任何要测试的返回值。否则，此表格几乎没有用处。
+如果你有一个返回`void`的函数需要传播错误，你需要使用这种形式，因为没有任何错误返回值可以测试。相反，使用显示声明的错误返回值可以允许C编译器生成更有效率的代码。因此也更推荐。
 
-可以使用以下命令声明可能引发异常的外部 C ++函数：
+一个可能引发异常的外部 C++ 函数可以被这样声明：
 
 ```py
 cdef int spam() except +
-
 ```
 
-有关详细信息，请参阅 [在 Cython](wrapping_CPlusPlus.html#wrapping-cplusplus)中使用 C ++。
+> 注意：这些声明不可以在Python代码中使用，必须是 `.pxd` 或者 `.pyx` 文件。
+
+更多细节可以查看[在Cython中使用C ++](31.md).
+
+最后，如果你确定你的函数绝不会引发异常（比如它根本不使用Python对象，或者你准备将它作为C代码的中的回调函数，对Python异常完全无感知），你可以用 `noexcept` 或者 `@cython.exceptval(check=False)`
+来声明。
+
+```py
+cdef int spam() noexcept:
+    ...
+```
+
+如果一个 `noexcept` 函数**确实**以异常状态结束，那么它会打印一段警告信息，但是不会允许异常进一步传播。从另一个角度来说，调用 `noexcept` 的函数在管理异常方面也没有任何额外开销，这点和之前的声明不同。
 
 有些事情需要注意：
+*   `extern` 的 `cdef` 函数隐式的被声明为 `noexcept` 或 `@cython.exceptval(check=False)`。 如果在极端情况下，这些外部的C/C ++ 函数确实**应该**引发Python异常的话（比如使用Python C API的外部函数），你可以显式给它声明一个异常返回值。
 
-*   异常值只能为返回整数，枚举，浮点或指针类型的函数声明，并且值必须是常量表达式。 Void 函数只能使用`except *`的形式。
+*   不是`extern` 的 `cdef` 函数隐式的被声明为带一个合适的、针对返回值类型的异常返回值（比如：`except *` 或者 `@cython.exceptval(check=True)`）。对于 `void` 返回类型，则作为`int`类型返回 -- `except? -1` 或者 `@cython.exceptval(-1,check=True)
+  
+*   异常值只能为返回整数，枚举，浮点或指针类型的函数声明，并且值必须是常量表达式。 返回 `void`， 结构/联合体值的函数，只能使用`except *` 或者 `@exceptval(check=True)` 的形式。
 
 *   异常值规范是函数签名的一部分。如果您将指向函数的指针作为参数传递或将其指定给变量，则声明的参数或变量类型必须具有相同的异常值规范（或缺少该规范）。以下是带有异常值的指针到函数声明的示例：
 
     ```py
     int (*grail)(int, char*) except -1
-
     ```
+    > 注意：纯Python风格目前不支持函数指针。 [Github Issue #4279](https://github.com/cython/cython/issues/4279)
 
+*   如果一个带 `except *` 或者 `@cython.exceptval(checkTrue)的用 `cdef` 声明的函数返回值类型为C整型、枚举、浮点值或者指针类型，Cython只会在返回了专属值（-1）的时候调用**PyErr_Occurred**，而不是每次函数调用结束都吊用。
+  
 *   您不需要（也不应该）为返回 Python 对象的函数声明异常值。请记住，没有声明返回类型的函数会隐式返回 Python 对象。 （通过返回 NULL 隐式传播此类函数的异常。）
+
+*   当把 `nogil` 和 `except *` `@cython.exceptval(check=True)` 结合使用时，这里有一个已知的性能陷阱。在这种情况下，Cython必须在函数调用后重新获得GIL，来检查是否引发了异常。这通常会在函数没有返回任何值（比如C void）时发生。一个简单的解决办法是当你确定函数不应该抛出异常时把函数标记为 `noexcept`，或者是把返回值设为 `int` 然后让Cython把返回值当作错误标识使用（比如默认情况下，`-1` 会触发异常检查）
 
 ### 检查非 Cython 函数的返回值
 
